it should look correctly on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 .light-font {
   font-family: 'Roboto';
+  font-size: 20px;
 }
 
 .heavy-font {
